RESOLVED FIXED156249
Correct applicationWillTerminate logic for ResourceLoadStatistics
https://bugs.webkit.org/show_bug.cgi?id=156249
Summary Correct applicationWillTerminate logic for ResourceLoadStatistics
Brent Fulgham
Reported 2016-04-05 14:07:12 PDT
The "applicationWillTerminate" logic for the ResourceLoadStatistics code can cause a crash when exiting.
Attachments
Patch (2.85 KB, patch)
2016-04-05 14:13 PDT, Brent Fulgham
no flags
Brent Fulgham
Comment 1 2016-04-05 14:08:14 PDT
Brent Fulgham
Comment 2 2016-04-05 14:13:57 PDT
WebKit Commit Bot
Comment 3 2016-04-05 18:31:17 PDT
Comment on attachment 275694 [details] Patch Clearing flags on attachment: 275694 Committed r199088: <http://trac.webkit.org/changeset/199088>
WebKit Commit Bot
Comment 4 2016-04-05 18:31:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.