Correct applicationWillTerminate logic for ResourceLoadStatistics https://bugs.webkit.org/show_bug.cgi?id=156249 <rdar://problem/25179611>

Reviewed by Andy Estes.

The applicationWillTerminate handling for ResourceLoadStatistics incorrectly
assumes that a ResourceLoadStatistics object will always be present.
1. The termination handling for 'dataStoresWithStorageManagers' should be
   calling 'applicationWillTerminate' on any ResourceLoadStatistics
   objects attached to the dataStore.
2. platformInitialize should null-check before attempting to dispatch.
3. platformDestroy should null check before attempting to dispatch.

* UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm:
(WebKit::WebsiteDataStore::platformInitialize):
(WebKit::WebsiteDataStore::platformDestroy): Invoke 'applicationWillTerminate' on
m_resourceLoadStatistics if present.


Canonical link: https://commits.webkit.org/174361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199088 268f45cc-cd09-0410-ab3c-d52691b4dbfc